Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,25 +1,15 @@
 <html>
 
   <head>
-      <title>Em busca do perfeito</title>
+      <title>NoName</title>
   </head>
 
-  <body>
+  {% for post in posts %}
     <div>
-        <h1><a href="">Django Girls Blog</a></h1>
+        <p>published: {{ post.published_date }}</p>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
     </div>
+  {% endfor %}
 
-    <div>
-        <p>published: 14.06.2014, 12:14</p>
-        <h2><a href="">My first post</a></h2>
-        <p>Eita bicho!</p>
-    </div>
-
-    <div>
-        <p>published: 14.06.2014, 12:14</p>
-        <h2><a href="">My second post</a></h2>
-        <p>Tá funcionando!</p>
-    </div>
-
-    </body>
 </html>
